Changed restaurantController to menuController

--- a/DigitalMenu/Index.html
+++ b/DigitalMenu/Index.html
@@ -208,6 +208,6 @@
     <script src="scripts/android-stock-browser-fix.js"></script>
     <!-- Custom -->
     <script src="scripts/restauRaterModule.js"></script>
-    <script src="scripts/restaurantController.js"></script>
+    <script src="scripts/menuController.js"></script>
 </body>
 </html>
